@@ -1,3 +1,10 @@
+Sun Jun 10 11:20:58 GMT 2012  Olly Betts <olly@survex.com>
+
+	* backends/brass/brass_btreebase.cc,backends/brass/brass_btreebase.h,
+	  backends/chert/chert_btreebase.cc,backends/chert/chert_btreebase.h:
+	  Remove unused copy constructors for BrassTable_base and
+	  ChertTable_base.
+
 Wed Jun 06 11:10:26 GMT 2012  Olly Betts <olly@survex.com>
 
 	* include/xapian/queryparser.h: Note that STEM_ALL_Z was added in
